--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -1,7 +1,5 @@
-persistence true
-persistence_location /mosquitto/data/
-log_dest stdout
-
-allow_anonymous true
-
 listener 1883
+allow_anonymous true
+persistence true
+persistence_location /mosquitto/data
+log_dest stdout
